Third Week Task 3 25 SMT 1 17/10

--- a/tugas3.html
+++ b/tugas3.html
@@ -55,12 +55,9 @@
             merge(arr, left, mid, right);
         }
 
-        // ============================
-        // 1️⃣ ARRAY ANGKA
-        // ============================
+        // ARRAY ANGKA
         const angka = [45, 12, 78, 23, 56, 89, 90, 34, 67, 10, 5, 49, 82, 13, 29];
 
-        console.log("=========================================");
         console.log("=== DATA ANGKA SEBELUM DIURUTKAN ===");
         console.table(angka);
 
@@ -75,16 +72,13 @@
         console.log("=== HASIL MERGE SORT DESCENDING (Besar → Kecil) ===");
         console.table(descendingAngka);
 
-        // ============================
-        // 2️⃣ ARRAY STRING
-        // ============================
+        // ARRAY STRING
         const nama = [
             "Sarah", "Rahmanyadianti", "Zalfa", "Gavin", "Ihsan", "Rafi",
             "Dzakwan", "Nadya", "Farrel", "Aira", "Cheryl", "Amry",
             "Sultan", "Toni", "Rizky"
         ];
 
-        console.log("=========================================");
         console.log("=== DATA STRING SEBELUM DIURUTKAN ===");
         console.table(nama);
 
@@ -99,9 +93,7 @@
         console.log("=== HASIL MERGE SORT DESCENDING (Z → A) ===");
         console.table(descendingNama);
 
-        console.log("=========================================");
         console.log("=== TUGAS 3 MERGE SORT SELESAI ===");
-        console.log("=========================================");
     </script>
 </body>
 </html>
