Tenth Week, Task 4 25 SMT 1, 08/11/25, Record & Pointer

--- a/tugas4.html
+++ b/tugas4.html
@@ -34,9 +34,10 @@
     const mhs13 = new Mahasiswa("Muhammad Rizky Putra Pandhawa", "Teknologi Permainan", 2025);
     const mhs14 = new Mahasiswa("Javier Rifa Al insan", "Teknologi Permainan", 2025);
     const mhs15 = new Mahasiswa("Sultan Daffa Julyan Rusmana", "Teknologi Permainan", 2025);
+    const mhs16 = new Mahasiswa("Rakha Sapta Fabian", "Teknologi Permainan", 2025);
 
     // Membuat array untuk menyimpan semua record mahasiswa
-    const daftarMahasiswa = [mhs1, mhs2, mhs3, mhs4, mhs5, mhs6, mhs7, mhs8, mhs9, mhs10, mhs11, mhs12, mhs13, mhs14, mhs15];
+    const daftarMahasiswa = [mhs1, mhs2, mhs3, mhs4, mhs5, mhs6, mhs7, mhs8, mhs9, mhs10, mhs11, mhs12, mhs13, mhs14, mhs15, mhs16];
 
     // Menampilkan semua data mahasiswa dalam bentuk tabel
     console.log("=== DATA MAHASISWA (RECORD) ===");
